<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_formulario">Cadastro</string>
    <string name="telefone">Telefone:</string>
    <string name="nota_">Nota:</string>
    <string name="gravar">Gravar</string>
    <string name="alterar">Alterar</string>
    <string name="nome_">Nome:</string>
    <string name="site_">Site:</string>
    <string name="endere_o_">Endereço:</string>
    <string name="digite_seu_nome_aqui">Digite seu nome aqui</string>
    <string name="digite_seu_site_aqui">Digite seu site aqui</string>
    <string name="digite_seu_endere_o_aqui">Digite seu endereço aqui</string>
    <string name="digite_seu_telefone_aqui">Digite seu telefone aqui</string>
    <string name="imagem_de_teste">Imagem de teste</string>

</resources>
